<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.a1k28</groupId>
  <artifactId>evoc</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>evoc</name>
  <url>http://maven.apache.org</url>

  <properties>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.source>17</maven.compiler.source>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>maven-central</id>
      <name>Maven central</name>
      <url>https://repo.maven.apache.org/maven2/</url>
    </repository>
<!--    <repository>-->
<!--      <id>sosy-lab</id>-->
<!--      <name>SoSy-Lab Repository</name>-->
<!--      <url>https://packages.sosy-lab.org/repository/maven-releases/</url>-->
<!--    </repository>-->
    <repository>
      <id>itemis-maven-mps</id>
      <name>itemis Maven MPS Repository</name>
      <url>https://artifacts.itemis.cloud/repository/maven-mps/</url>
    </repository>
  </repositories>

  <dependencies>
    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.11.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.32</version>
      <scope>provided</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.10.2</version>
<!--      <scope>test</scope>-->
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.10.2</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>5.10.2</version>
    </dependency>
    <dependency>
      <groupId>org.pitest</groupId>
      <artifactId>pitest</artifactId>
      <version>1.16.1</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/libs/org/pitest/pitest-dev-SNAPSHOT.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>org.pitest</groupId>
      <artifactId>pitest-entry</artifactId>
      <version>1.16.1</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/libs/org/pitest/pitest-entry-dev-SNAPSHOT.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>com.github.a1k28</groupId>
      <artifactId>dynamic-classloader-agent</artifactId>
      <version>1.0-SNAPSHOT</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/libs/com/github/a1k28/dclagent/dynamic-classloader-agent-1.0-SNAPSHOT.jar</systemPath>
    </dependency>
<!--    <dependency>-->
<!--      <groupId>com.microsoft.z3</groupId>-->
<!--      <artifactId>z3</artifactId>-->
<!--      <version>1.0</version>-->
<!--      <scope>system</scope>-->
<!--      <systemPath>${project.basedir}/libs/com/microsoft/z3/com.microsoft.z3.jar</systemPath>-->
<!--    </dependency>-->
    <!-- https://mvnrepository.com/artifact/org.pitest/pitest-junit5-plugin -->
    <dependency>
      <groupId>org.pitest</groupId>
      <artifactId>pitest-junit5-plugin</artifactId>
      <version>1.2.1</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.github.javaparser/javaparser-core -->
    <dependency>
      <groupId>com.github.javaparser</groupId>
      <artifactId>javaparser-core</artifactId>
      <version>3.26.0</version>
    </dependency>
    <dependency>
      <groupId>org.instancio</groupId>
      <artifactId>instancio-junit</artifactId>
      <version>4.8.0</version>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
      <version>9.7</version>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-util</artifactId>
      <version>9.7</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-text</artifactId>
      <version>1.12.0</version>
    </dependency>
    <dependency>
      <groupId>org.soot-oss</groupId>
      <artifactId>sootup.core</artifactId>
      <version>1.1.2</version>
    </dependency>
    <dependency>
      <groupId>org.soot-oss</groupId>
      <artifactId>sootup.java.bytecode</artifactId>
      <version>1.1.2</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.microsoft.z3/javaAPI -->
    <!-- https://mvnrepository.com/artifact/com.microsoft.z3/java-jar -->
    <dependency>
      <groupId>com.microsoft.z3</groupId>
      <artifactId>java-jar</artifactId>
      <version>4.11.2</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
    <dependency>
      <groupId>org.freemarker</groupId>
      <artifactId>freemarker</artifactId>
      <version>2.3.33</version>
    </dependency>
    <!--    <dependency>-->
<!--      <groupId>org.sosy-lab</groupId>-->
<!--      <artifactId>java-smt</artifactId>-->
<!--      <version>3.14.3</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.sosy-lab</groupId>-->
<!--      <artifactId>javasmt-solver-z3</artifactId>-->
<!--      <version>4.8.17</version>-->
<!--    </dependency>-->
    <!-- https://mvnrepository.com/artifact/org.sosy-lab/javasmt-solver-z3 -->
    <!-- https://mvnrepository.com/artifact/org.sosy-lab/javasmt-solver-z3 -->
<!--    <dependency>-->
<!--      <groupId>org.sosy-lab</groupId>-->
<!--      <artifactId>javasmt-solver-z3</artifactId>-->
<!--      <version>4.8.9-sosy1</version>-->
<!--    </dependency>-->
    <!--    &lt;!&ndash; https://mvnrepository.com/artifact/io.jenetics/jenetics &ndash;&gt;-->
<!--    <dependency>-->
<!--      <groupId>io.jenetics</groupId>-->
<!--      <artifactId>jenetics</artifactId>-->
<!--      <version>8.0.0</version>-->
<!--    </dependency>-->
  </dependencies>
</project>
